fix minor bug, TeXLive-readied

--- a/rendering.tex
+++ b/rendering.tex
@@ -5,7 +5,7 @@
 \textit{Most, but not all, elements have a \say{class}. This allows for uniform referencing of components by class:}\\
 \entry{45mm}{\textbackslash ctikzset\{inductors/scale=.7\}}{scale all $L$s}\\
 \textit{Classes are as follows (legacy are starred):}\\
-{\footnotesize\begin{multicols}{3}\begin{itemize}[leftmargin=0,label={}]
+{\footnotesize\begin{multicols}{3}\begin{itemize}[leftmargin=0pt,label={}]
     \item amplifiers
     \item batteries
     \item blocks
